stuck on auth issue

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,12 +1,34 @@
-$backdrop: slategrey;
+
 
 body{
-  background-color: $backdrop;
-  background-image: "assets/corridor.jpg";
+  background-image: url(../assets/corridor.jpg);
+  background-size: 100%;
 }
 
 .loginSection{
   border: 2px solid white;
   padding: 5px;
   margin-top: 5em;
+}
+
+.dungeon {
+  height: 40em;
+  background-size: 100%
+}
+
+.main-view{
+  margin-top: none;
+}
+
+.menuBox{
+  // position: absolute;
+  // top: 20 em;
+  // left: 20 em;
+  background-image: url(../assets/rectangle.png);
+  background-size: 100%
+}
+
+.loginBox{
+  background-image: url(../assets/rectangle.png);
+  background-size: 100%
 }
